--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P100.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P100.xaml
@@ -192,7 +192,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="86" StatusComponent="293-01-MA1" Canvas.Left="457" Canvas.Top="510"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="96" StatusComponent="120-01-MA1" PipeHeight="Medium" Canvas.Left="1358" Canvas.Top="480"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="112" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="658" Canvas.Top="502">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="112" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="655" Canvas.Top="502">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -354,9 +354,9 @@
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="100-01-MA1" JumpToLabel="098-01-MA1" Canvas.Left="350" Canvas.Top="38"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="115-41-LT1" JumpToLabel="293-01-MA1" RenderTransformOrigin="-0.711,0.53" Canvas.Left="489" Canvas.Top="478" Direction="Left"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="120-01-MA1" JumpToLabel="128-01-MA1" Canvas.Left="1431" Canvas.Top="450"/>
-        <Labels:JumpLabel JumpFromLabel="106-01-MA1" JumpToLabel="051-01-MA1" Canvas.Left="678" Canvas.Top="539" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="127-01-MA1" JumpToLabel="071-01-MA1" Canvas.Left="1395" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="123-01-MA1" JumpToLabel="071-01-MA1" Canvas.Left="1440" Canvas.Top="112" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="106-01-MA1" JumpToLabel="071-01-MA1" Canvas.Left="674" Canvas.Top="539" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="127-01-MA1" JumpToLabel="073-01-MA1" Canvas.Left="1395" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="123-01-MA1" JumpToLabel="073-01-MA1" Canvas.Left="1440" Canvas.Top="112" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="107-HEAT" DetailsPageName="D107" Canvas.Left="15" Canvas.Top="472" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="115-01-MA1" Canvas.Left="362" Canvas.Top="569" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="115-21-CV1" Canvas.Left="212" Canvas.Top="439" HorizontalAlignment="Center" VerticalAlignment="Top"/>
