--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P170.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P170.xaml
@@ -10,8 +10,20 @@
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
 
-        <Labels:Pipe Width="85" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="378" Canvas.Top="544" VisibilityComponent="" VisibilitySignal="" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="98" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="412" Canvas.Top="591" VisibilityComponent="" VisibilitySignal="" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="96" StatusComponent="173-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="956" Canvas.Top="697" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="52" StatusComponent="073-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1344" Canvas.Top="547" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+
+        <Labels:Pipe Width="85" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="322" Canvas.Top="544" VisibilityComponent="" VisibilitySignal="" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="98" StatusComponent="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="356" Canvas.Top="591" VisibilityComponent="" VisibilitySignal="" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -78,7 +90,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="147" StatusComponent="168-01-MA1" PipeHeight="Medium" Canvas.Left="538" Canvas.Top="157" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="90" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="646" Canvas.Top="395" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="62" StatusComponent="173-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="482" Canvas.Top="673" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Labels:Pipe Width="44" StatusComponent="173-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1120" Canvas.Top="666" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -88,7 +100,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="61" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1268" Canvas.Top="758" VisibilityComponent="185-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="60" StatusComponent="073-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1280" Canvas.Top="731" VisibilityComponent="185-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -98,7 +110,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="61" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1339" Canvas.Top="758" VisibilityComponent="185-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="62" StatusComponent="073-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1350" Canvas.Top="731" VisibilityComponent="185-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -162,7 +174,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="913" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="406" Canvas.Top="28" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="195-21-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Width="245" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="226" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="160" StatusComponent="165-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="225" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="83" StatusComponent="163-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="234" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="167" StatusComponent="164-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="9" Canvas.Top="559" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -174,11 +186,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="83" StatusComponent="173-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="632" Canvas.Top="646" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="84" StatusComponent="174-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="848" Canvas.Top="646" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="83" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1059" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="68" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1269" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="44" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1313" Canvas.Top="666" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="83" StatusComponent="177-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="520" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="84" StatusComponent="174-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="707" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="83" StatusComponent="175-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="878" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="56" StatusComponent="173-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1088" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="116" StatusComponent="073-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1288" Canvas.Top="603" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -199,17 +211,17 @@
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="299" Canvas.Top="470" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="81" Canvas.Top="470" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="81" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:NT_ConveyorBelt Height="3" Width="207" RenderTransformOrigin="0.5,0.5" Canvas.Left="441" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="697" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="911" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="1126" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="491" Canvas.Top="684" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:Manual_selection Height="86" Width="46" Canvas.Left="501" Canvas.Top="544" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_DV_GrinderDiverter Canvas.Left="1286" Canvas.Top="674" HorizontalAlignment="Left" VerticalAlignment="Center" Height="81" Width="98"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1277" Canvas.Top="764" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1348" Canvas.Top="764" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="3" Stroke="Black" Width="152" Canvas.Left="1243" Canvas.Top="750" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1208" Canvas.Top="721" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:NT_ConveyorBelt Height="3" Width="170" RenderTransformOrigin="0.5,0.5" Canvas.Left="355" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="150" RenderTransformOrigin="0.5,0.5" Canvas.Left="567" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="150" RenderTransformOrigin="0.5,0.5" Canvas.Left="758" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="164" RenderTransformOrigin="0.5,0.5" Canvas.Left="945" Canvas.Top="638" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1120" Canvas.Top="668" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:Manual_selection Height="86" Width="46" Canvas.Left="959" Canvas.Top="552" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DV_GrinderDiverter Canvas.Left="1298" Canvas.Top="647" HorizontalAlignment="Left" VerticalAlignment="Top" Height="82" Width="98"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1288" Canvas.Top="737" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1360" Canvas.Top="737" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Rectangle Height="4" Stroke="Black" Width="152" Canvas.Left="1254" Canvas.Top="723" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1220" Canvas.Top="695" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -219,7 +231,7 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Labels:JumpLabel JumpFromLabel="173-01-MA1" JumpToLabel="180-01-MA1" Canvas.Left="333" Canvas.Top="511" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="177-01-MA1" JumpToLabel="180-01-MA1" Canvas.Left="277" Canvas.Top="511" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="165-01-MA1" JumpToLabel="150-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="207" Canvas.Top="127"/>
         <Labels:JumpLabel JumpFromLabel="208-01-MA1" JumpToLabel="229-01-MA1" Canvas.Left="1337" Canvas.Top="199" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="170-SORT" DetailsPageName="D170" Canvas.Left="777" Canvas.Top="58" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -232,12 +244,14 @@
         <Labels:DeviceLabel ComponentName="163-01-MA1" Canvas.Left="279" Canvas.Top="414" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="164-01-MA1" Canvas.Left="61" Canvas.Top="414" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="165-01-MA1" Canvas.Left="163" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="173-01-MA1" Canvas.Left="566" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="174-01-MA1" Canvas.Left="779" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="175-01-MA1" Canvas.Left="993" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="177-01-MA1" Canvas.Left="1208" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="185-21-CV1" Canvas.Left="1368" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="185-71-ECS1" Canvas.Left="1174" Canvas.Top="778" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="185-71-ECS2" Canvas.Left="1397" Canvas.Top="778" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="177-01-MA1" Canvas.Left="435" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="174-01-MA1" Canvas.Left="627" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="175-01-MA1" Canvas.Left="818" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="173-01-MA1" Canvas.Left="1027" Canvas.Top="582" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="185-21-CV1" Canvas.Left="1380" Canvas.Top="619" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="185-71-ECS1" Canvas.Left="1186" Canvas.Top="751" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="185-71-ECS2" Canvas.Left="1408" Canvas.Top="751" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="173-01-MA1" JumpToLabel="031-01-MA1" Canvas.Left="970" Canvas.Top="729" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="185-21-CV1" JumpToLabel="073-01-MA1" Canvas.Left="1382" Canvas.Top="515" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
     </Canvas>
 </UserControl>
