V3960: Changed P061 Items in Conveyor Belts from Screw

--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P061.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P061.xaml
@@ -156,22 +156,22 @@
         <Machines:Waste Height="46" Width="44" Canvas.Left="664" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="664" Canvas.Top="422" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="664" Canvas.Top="632" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="450" Canvas.Top="774" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="223" Canvas.Top="774" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="398" Canvas.Top="236" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="171" Canvas.Top="236" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="398" Canvas.Top="138" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="171" Canvas.Top="138" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="398" Canvas.Top="446" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="171" Canvas.Top="446" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="398" Canvas.Top="348" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="171" Canvas.Top="348" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="398" Canvas.Top="656" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="171" Canvas.Top="656" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="398" Canvas.Top="558" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="171" Canvas.Top="558" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="167" Canvas.Left="1192" Canvas.Top="508" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight Height="22" Width="176" Canvas.Left="965" Canvas.Top="508" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="171" Canvas.Top="657" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="394" Canvas.Top="559" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="171" Canvas.Top="559" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="394" Canvas.Top="447" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="171" Canvas.Top="447" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="394" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="171" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="394" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="171" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="396" Canvas.Top="138" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="174" Canvas.Top="138" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="1192" Canvas.Top="509" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="965" Canvas.Top="508" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="446" Canvas.Top="775" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="223" Canvas.Top="775" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:NT_ConveyorBelt Height="3" Width="176" Canvas.Left="394" Canvas.Top="657" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="081-01-MA1" Canvas.Left="527" Canvas.Top="714" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="079-01-MA1" Canvas.Left="309" Canvas.Top="713" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="037-71-ECS1" Canvas.Left="710" Canvas.Top="224" HorizontalAlignment="Center" VerticalAlignment="Top"/>
