V4125: General Verification and Update

--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/OverallView.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/OverallView.xaml
@@ -176,13 +176,13 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="1516" Canvas.Top="2018" Width="200" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <local:P020 CacheMode="BitmapCache" Canvas.Left="26" Canvas.Top="216" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P230 CacheMode="BitmapCache" Canvas.Left="2852" Canvas.Top="36" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P288 CacheMode="BitmapCache" Canvas.Left="138" Canvas.Top="1582" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P430 CacheMode="BitmapCache" Canvas.Left="4374" Canvas.Top="604" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P110 CacheMode="BitmapCache" Canvas.Left="1213" Canvas.Top="839" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P464 CacheMode="BitmapCache" Canvas.Left="2852" Canvas.Top="1953" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P510 CacheMode="BitmapCache" Canvas.Left="3706" Canvas.Top="2622" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P570 CacheMode="BitmapCache" Canvas.Left="4611" Canvas.Top="3200" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P020 d:CacheMode="BitmapCache" Canvas.Left="26" Canvas.Top="216" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P230 d:CacheMode="BitmapCache" Canvas.Left="2852" Canvas.Top="36" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P288 d:CacheMode="BitmapCache" Canvas.Left="138" Canvas.Top="1582" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P430 d:CacheMode="BitmapCache" Canvas.Left="4374" Canvas.Top="604" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P110 d:CacheMode="BitmapCache" Canvas.Left="1213" Canvas.Top="839" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P464 d:CacheMode="BitmapCache" Canvas.Left="2852" Canvas.Top="1953" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P510 d:CacheMode="BitmapCache" Canvas.Left="3706" Canvas.Top="2622" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P570 d:CacheMode="BitmapCache" Canvas.Left="4611" Canvas.Top="3200" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     </Canvas>
 </UserControl>
