--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P230.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P230.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Color="Water" Width="102" RenderTransformOrigin="0.5,0.5" StatusComponent="231-01-MA1" Canvas.Left="626" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="102" RenderTransformOrigin="0.5,0.5" StatusComponent="457-01-MA1" Canvas.Left="626" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="230-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -30,11 +30,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="256" StatusComponent="231-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="675" Canvas.Top="621" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="256" StatusComponent="457-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="675" Canvas.Top="621" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="230-21-CV1" VisibilitySignal="LS1"/>
         <Labels:Pipe Color="Water" Width="124" StatusComponent="210-02-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="541" Canvas.Top="211" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="251" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="149" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{lex:Loc BACK-UP ONLY}"/>
         <Labels:Pipe Color="Water" Width="406" StatusComponent="232-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="690" Canvas.Top="682" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="231-01-MA1" Canvas.Left="882" Canvas.Top="576" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Color="Water" Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="457-01-MA1" Canvas.Left="882" Canvas.Top="576" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="230-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -42,7 +42,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="135" StatusComponent="236-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="501" Canvas.Top="754" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="246" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV2" Canvas.Left="1191" Canvas.Top="528" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
+        <Labels:Pipe Color="Water" Width="246" RenderTransformOrigin="0.5,0.5" StatusComponent="232-21-CV1" Canvas.Left="1191" Canvas.Top="528" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Right">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
