--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P288.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P288.xaml
@@ -44,14 +44,14 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="373" StatusComponent="293-01-MA1" Canvas.Left="870" Canvas.Top="645"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="162" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="288" Canvas.Top="619">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="162" RenderTransformOrigin="0.5,0.5" StatusComponent="101-01-MA1" Canvas.Left="288" Canvas.Top="619">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="111" StatusComponent="286-01-MA1" Canvas.Left="367" Canvas.Top="540"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="ByProduct" Width="111" StatusComponent="286-01-MA1" Canvas.Left="379" Canvas.Top="488"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="107" StatusComponent="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="249" Canvas.Top="533"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="75" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="251" Canvas.Top="502"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="101-01-MA1" Canvas.Left="243" Canvas.Top="403">
@@ -61,14 +61,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="193" Canvas.Top="273">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="52" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="191" Canvas.Top="273">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="27" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="463" Canvas.Top="551">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Color="ByProduct" Width="27" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="475" Canvas.Top="499">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -91,8 +91,8 @@
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1059" Canvas.Top="626"/>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="455" Canvas.Top="544"/>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="197" Canvas.Top="283"/>
+        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="467" Canvas.Top="492"/>
+        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="195" Canvas.Top="283"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1059" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:VRC_WaterCollectingTank Height="78" Width="93" Canvas.Left="322" Canvas.Top="662" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="346" Canvas.Top="677" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -120,14 +120,11 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-21-CV1" Canvas.Left="1037" Canvas.Top="189"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="293-01-MA1" Canvas.Left="1037" Canvas.Top="676"/>
         <Labels:DeviceLabel ComponentName="291-01-MA1" Canvas.Left="1037" Canvas.Top="443" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-41-LT1" Canvas.Left="321" Canvas.Top="514"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="116" Canvas.Top="528"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-01-MA1" Canvas.Left="435" Canvas.Top="443"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="116" Canvas.Top="460"/>
-        <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="213" Canvas.Top="409" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-01-MA1" Canvas.Left="813" Canvas.Top="400"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="288-41-LT1" Canvas.Left="814" Canvas.Top="468"/>
         <Labels:DeviceLabel ComponentName="285-01-MA1" Canvas.Left="215" Canvas.Top="675" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="293-71-ECS2" Canvas.Left="1223" Canvas.Top="623" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="286-VIEW" DetailsPageName="D286" Canvas.Left="424" Canvas.Top="514" HideComponentName="True" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="316" Canvas.Top="514" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
