--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P430.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P430.xaml
@@ -67,7 +67,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="137" Color="Water" StatusComponent="453-01-MA1" Canvas.Left="298" Canvas.Top="264" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="185" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="188" Canvas.Top="137" Icon="Right"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="166" StatusComponent="430-01-MA4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="946" Canvas.Top="224"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="166" StatusComponent="430-01-MA4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="946" Canvas.Top="224" Direction="DirectionOne"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="225" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="508" Canvas.Top="224"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="134" RenderTransformOrigin="0.5,0.5" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="665" Canvas.Top="144">
             <Labels:Pipe.RenderTransform>
@@ -87,9 +87,9 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="226" StatusComponent="233-01-MA1" PipeHeight="Medium" Canvas.Left="214" Canvas.Top="224"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="48" Color="Water" StatusComponent="420-71-ECS1" Canvas.Left="370" Canvas.Top="207"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="66" StatusComponent="430-01-MA4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1103" Canvas.Top="264"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="66" StatusComponent="430-01-MA4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1103" Canvas.Top="187"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="85" StatusComponent="430-01-MA4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1065" Canvas.Top="225">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="66" StatusComponent="430-01-MA4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1103" Canvas.Top="264" Direction="DirectionOne"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="66" StatusComponent="430-01-MA4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1103" Canvas.Top="187" Direction="DirectionOne"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="85" StatusComponent="430-01-MA4" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1065" Canvas.Top="225" Direction="DirectionOne">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
