--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P464.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P464.xaml
@@ -33,7 +33,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="84" StatusComponent="470-01-MA1" PipeHeight="Medium" Canvas.Left="1131" Canvas.Top="180" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="170" StatusComponent="430-01-MA4" PipeHeight="Medium" Canvas.Left="1352" Canvas.Top="51" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="170" StatusComponent="430-01-MA4" PipeHeight="Medium" Canvas.Left="1352" Canvas.Top="51" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionOne"/>
         <Labels:Pipe Width="147" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" Canvas.Left="1319" Canvas.Top="219" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="474-21-CV1" Canvas.Left="1322" Canvas.Top="449" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="43" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="1300" Canvas.Top="200" HorizontalAlignment="Left" VerticalAlignment="Center">
@@ -132,7 +132,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="236" RenderTransformOrigin="0.5,0.5" StatusComponent="482-01-MA1" PipeHeight="Medium" Canvas.Left="903" Canvas.Top="735"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="82" StatusComponent="460-01-MA1" PipeHeight="Medium" Canvas.Left="360" Canvas.Top="180"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA4" PipeHeight="Medium" Canvas.Left="47" Canvas.Top="51"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA4" PipeHeight="Medium" Canvas.Left="47" Canvas.Top="51" Direction="DirectionOne"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent="" Canvas.Left="106" Canvas.Top="215"/>
         <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="464-21-CV1" Canvas.Left="195" Canvas.Top="448" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="43" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="230" Canvas.Top="196">
@@ -221,13 +221,8 @@
                 </TransformGroup>
             </Machines:V01_CV_ValveDouble.RenderTransform>
         </Machines:V01_CV_ValveDouble>
-        <Machines:WaterPump Height="66" Width="56" Color="Oil" Canvas.Left="1276" Canvas.Top="545" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="180"/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
+        <Machines:WaterPump Height="66" Width="56" Color="Oil" Canvas.Left="1221" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+
         <Labels:DeviceLabel ComponentName="474-04-MA1" Canvas.Left="981" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="474-01-MA1" Canvas.Left="1206" Canvas.Top="322" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="474-21-CV1" Canvas.Left="1353" Canvas.Top="381" HorizontalAlignment="Left" VerticalAlignment="Center"/>
