--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P570.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P570.xaml
@@ -84,9 +84,9 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-21-CV1" Canvas.Left="339" Canvas.Top="249"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-71-ECS1" Canvas.Left="1156" Canvas.Top="634"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-01-MA1" Canvas.Left="418" Canvas.Top="461"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-41-LT2" Canvas.Left="542" Canvas.Top="399"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-41-LT1" Canvas.Left="806" Canvas.Top="399"/>
-        <Labels:DeviceLabel ComponentName="570-BUNKER" Canvas.Left="339" Canvas.Top="364" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-41-LT1" Canvas.Left="542" Canvas.Top="399"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="570-41-LT2" Canvas.Left="806" Canvas.Top="399"/>
+        <Labels:DeviceLabel ComponentName="570-BUNKER" Canvas.Left="384" Canvas.Top="375" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="570-01-MA1" JumpToLabel="544-01-MA1" Canvas.Left="418" Canvas.Top="101"/>
     </Canvas>
 </UserControl>
