--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P020.xaml
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Pages/P020.xaml
@@ -65,7 +65,7 @@
         <Machines:V01_PR_Prerompitore Canvas.Left="797" Canvas.Top="310" Height="298" Width="368" TrendName="LEVEL" ComponentName="020-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle HorizontalAlignment="Center" Height="41" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="674" Canvas.Top="547"/>
         <Border BorderThickness="1" HorizontalAlignment="Center" Height="165" VerticalAlignment="Top" Width="116" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="226" Canvas.Top="472"/>
-        <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="36" Width="32" Canvas.Left="1068" Canvas.Top="284"/>
+        <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="52" Width="62" Canvas.Left="1038" Canvas.Top="272"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air" Height="52" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1214" Canvas.Top="198"/>
         <Ellipse HorizontalAlignment="Center" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="668" Canvas.Top="539"/>
         <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="752" Canvas.Top="523"/>
